# perlink

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: tests.yml
perlink/: __main__.py  bot.py  config.py  db.py  emojis.py  log.py  main.py
tests/: __init__.py  test_config.py  test_urls.py
